# DroneWQ

./: .gitignore  .readthedocs.yaml  ABOUT.md  BACKLOG.md  Background.md  Dockerfile  Example_notebook.ipynb  Georeference.ipynb  LICENSE  README.md  RELEASE_NOTES.md  TODO  UAS_radiometry_processing.ipynb  UAS_radiometry_processing_v2.ipynb  UAS_radiometry_processing_v3.ipynb  environment.yml  georeferencing_improved.ipynb  index.rst  main.js  package-lock.json  package.json  paper.bib  paper.md  primary_demo.ipynb  primary_demo2.ipynb  primary_demo_lake_broadford.ipynb  primary_demo_lake_erie.ipynb  primary_demo_new.ipynb  pyproject.toml  surface_reflection_removal_comparison.ipynb  testing_functions.ipynb  utils.py  utils2.py  utils_awedits.py  utils_awedits2.py  utils_awedits3.py  utils_awedits4.py
.github/workflows/: draft-pdf.yml  python-package-conda.yml  python-publish.yml
App/: __init__.py  manage.py  pipeline.py  process.py
App/backend/: app.py  manage.py
App/frontend/: charts.js  dashboard.js  main.js  project_settings.js  upload.js
app/: __init__.py  app.py  app_ui.js  charts.js  check_models.py  config.py  csv_handler.js  dashboard.js  description_generator.py  health.py  image_handler.js  main.js  manage.py  mosaic_handler.js  package.json  pipeline.py  process.py  project_settings.js  projects.py  result.py  trajectory_handler.js  upload.js
app/backend/: app.py  config.py  graphs.py  process.py  projects.py  result.py
app/frontend/: app_ui.js  charts.js  csv_handler.js  dashboard.js  image_handler.js  main.js  mosaic_handler.js  package.json  project_settings.js  trajectory_handler.js  upload.js
app/models/: model_project.py
app/wireframes/: styles.css  wireframe-v2.html
doc/: APP_MAINTAINENCE_DOCUMENTATION.md
docs/: index.rst  micasense.rst  modules.rst  post_process_docs.py  requirements.txt
docs/pre_built_html/: .buildinfo  dronewq.core.html  dronewq.ed_methods.html  dronewq.html  dronewq.lw_methods.html  dronewq.masks.html  dronewq.utils.html  genindex.html  index.html  install.html  intro.html  modules.html  objects.inv  primary_demo.html  py-modindex.html  search.html  searchindex.js  theory.html
docs/source/: conf.py  dronewq.lw_methods.rst  dronewq.utils.rst  index.rst  install.md  intro.rst  modules.rst  theory.md
dronewq/: __init__.py
dronewq/calc/: wq_calc.py
dronewq/core/: __init__.py  downsample.py  mosaic.py  plot_map.py  raw_to_rss.py  wq_calc.py
dronewq/ed_methods/: __init__.py  dls_ed.py  panel_ed.py
dronewq/legacy/: __init__.py  dronewq.py  utils.py
dronewq/legacy_tests/: test_utils_high_priority.py
dronewq/lw_methods/: __init__.py  blackpixel.py  hedley.py  mobley_rho.py  mobley_rho_method.py
dronewq/masks/: __init__.py  rrs_std_pixel_masking.py  rrs_threshhold_pixel_masking.py  std_masking.py  threshhold_masking.py  threshold_masking.py
dronewq/mosaicking/: geometry.py  mosaic.py
dronewq/utils/: images.py  metadata.py  settings.py  utils.py
dronewq/wq_calc/: wq_calc.py
estuarine_dataset/: README
estuarine_dataset/align_img/: IMG_0043_3.tif  IMG_0043_4.tif
estuarine_dataset/panel/: IMG_0000_1.tif  IMG_0000_2.tif  IMG_0000_3.tif  IMG_0000_4.tif  IMG_0000_5.tif  IMG_0001_1.tif  IMG_0001_2.tif  IMG_0001_3.tif  IMG_0001_4.tif  IMG_0001_5.tif  IMG_0002_1.tif  IMG_0002_2.tif  IMG_0002_3.tif  IMG_0002_4.tif  IMG_0002_5.tif
estuarine_dataset/raw_sky_imgs/: IMG_0003_1.tif  IMG_0003_2.tif  IMG_0003_3.tif  IMG_0003_4.tif  IMG_0003_5.tif  IMG_0004_1.tif  IMG_0004_2.tif  IMG_0004_3.tif  IMG_0004_4.tif  IMG_0004_5.tif
estuarine_dataset/raw_water_imgs/: IMG_0035_1.tif  IMG_0035_2.tif  IMG_0035_5.tif  IMG_0036_1.tif  IMG_0036_2.tif  IMG_0036_3.tif  IMG_0037_2.tif  IMG_0037_3.tif  IMG_0037_5.tif  IMG_0038_1.tif  IMG_0038_4.tif  IMG_0038_5.tif  IMG_0039_1.tif  IMG_0039_5.tif  IMG_0040_3.tif  IMG_0040_5.tif  IMG_0041_3.tif  IMG_0041_4.tif  IMG_0042_2.tif  IMG_0043_2.tif  IMG_0043_5.tif  IMG_0044_1.tif  IMG_0044_5.tif  IMG_0045_5.tif  IMG_0046_2.tif  IMG_0046_3.tif  IMG_0046_4.tif  IMG_0046_5.tif  IMG_0047_2.tif  IMG_0047_3.tif  IMG_0047_4.tif  IMG_0048_2.tif  IMG_0048_3.tif  IMG_0049_1.tif  IMG_0050_1.tif  IMG_0050_3.tif
examples/: global_band_stats.csv  per_image_band_stats.csv
frontend/: charts.js  dashboard.js  project_settings.js
gulf_stream_dataset/raw_sky_imgs/: IMG_0016_1.tif  IMG_0016_2.tif  IMG_0016_3.tif  IMG_0016_4.tif  IMG_0016_5.tif  IMG_0017_1.tif  IMG_0017_2.tif  IMG_0017_3.tif  IMG_0017_4.tif  IMG_0017_5.tif  IMG_0018_3.tif  IMG_0018_4.tif  IMG_0019_1.tif  IMG_0019_2.tif  IMG_0019_3.tif  IMG_0019_4.tif  IMG_0019_5.tif  IMG_0020_1.tif  IMG_0020_2.tif  IMG_0020_3.tif  IMG_0020_4.tif  IMG_0020_5.tif
md_files/: APP_MAINTAINENCE_DOCUMENTATION.md  RELEASE_NOTES.md  TECHNICAL_DOCUMENTATION_FRONTEND.md  TECHNICAL_DOC_BACKEND.md  USER_DOCUMENTATION.md
micasense/: capture.py  panel.py
raw_water_imgs/: IMG_0035_3.tif  IMG_0035_4.tif  IMG_0036_4.tif  IMG_0036_5.tif  IMG_0037_1.tif  IMG_0037_4.tif  IMG_0038_2.tif  IMG_0038_3.tif  IMG_0039_2.tif  IMG_0039_3.tif  IMG_0039_4.tif  IMG_0040_1.tif  IMG_0040_2.tif  IMG_0040_4.tif  IMG_0041_1.tif  IMG_0041_2.tif  IMG_0041_5.tif  IMG_0042_1.tif  IMG_0042_3.tif  IMG_0042_4.tif  IMG_0042_5.tif  IMG_0043_1.tif  IMG_0044_2.tif  IMG_0044_3.tif  IMG_0044_4.tif  IMG_0045_1.tif  IMG_0045_2.tif  IMG_0045_3.tif  IMG_0045_4.tif  IMG_0046_1.tif  IMG_0047_1.tif  IMG_0047_5.tif  IMG_0048_1.tif  IMG_0048_4.tif  IMG_0048_5.tif  IMG_0049_2.tif  IMG_0049_3.tif  IMG_0049_4.tif  IMG_0049_5.tif  IMG_0050_2.tif  (+2 more)
src/dronewq/: __init__.py  (+1 more)
tests/: __init__.py  test_geometry.py  test_georeferencing.py  test_legacy_geometry.py  test_legacy_to_pipeline.py  test_legacy_wqcalc.py  test_legacywqcalc.py  test_lw_blackpixel.py  test_lw_hedly.py  test_masking.py  test_mobley_rho.py  test_new_pipeline.py  test_std_masking.py  test_threshholdmasking.py  test_utils.py  test_utils_high_priority.py  test_whole_pipeline.py  test_wq_edge.py  test_wqcalc.py  wq_edge.py
wheel/: dronewq-0.1.0-py3-none-any.whl
wireframe/: wireframe-v1.html
wireframes/: wireframe-v2.html  wireframe-v3.html
(+235 files in other folders)
